Java 17 w/ temp openjfx patch for gradle plugin