@@ -1,22 +1,30 @@
 plugins {
-    id 'org.springframework.boot' version '2.4.0'
-    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
+    id 'org.springframework.boot' version '2.5.6'
+    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
+    id 'application'
+    id 'org.openjfx.javafxplugin' version '0.0.11-SNAPSHOT'
 }
 
 group = 'com.mikeoertli'
-version = '0.0.3-SNAPSHOT'
-sourceCompatibility = '11'
+version = '0.1.0-SNAPSHOT'
+sourceCompatibility = '17'
 
 repositories {
     mavenCentral()
 }
 
+javafx {
+    version = "17.0.1"
+    modules = [ 'javafx.controls', 'javafx.fxml' ]
+    mainClassName = 'com.mikeoertli.rangeselector.demo.javafx.ThirdPartyFxApp'
+}
+
 dependencies {
-    compileOnly("org.springframework.boot:spring-boot-devtools")
+    implementation("org.springframework.boot:spring-boot-devtools")
 
     implementation 'org.springframework.boot:spring-boot-starter'
-    implementation 'org.apache.commons:commons-lang3:3.11'
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
@@ -24,3 +32,23 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+//compileJava {
+//    doFirst {
+//        options.compilerArgs = [
+//                '--module-path', classpath.asPath,
+//                '--add-modules', 'javafx.controls,javafx.fxml'
+//        ]
+//    }
+//}
+
+//mainClassName = 'com.mikeoertli.rangeselector.demo.javafx.ThirdPartyFxApp'
+
+//run {
+//    doFirst {
+//        jvmArgs = [
+//                '--module-path', classpath.asPath,
+//                '--add-modules', 'javafx.controls,javafx.fxml'
+//        ]
+//    }
+//}
